# 2024SC-M3-AD

./: README.md
AD/: ad.aux  ad.tex  makefile
SystemVerilog/: Data_Alloc.xlsx  ReadMe.md  etc.v  etc_baseline.v  tb_etc.v
SystemVerilog/Pattern_Gen/: Gen_Pat.m
cutlass_profile_cmds/: build_profile  run_build_1mma.sh  run_build_2mma.sh  run_build_2mma_reduced.sh  run_build_4mma.sh  run_build_4mma_reduced.sh
fft/: Makefile  README.md  cufft_doit_half.cpp  fft_speedup.csv  mpmxufft.cu  mpmxufft.h  mpmxufft_doit.cpp  mpmxufft_doit_f32.cpp  mpmxufft_f32.cu  mpmxufft_f32.h  mptest.sh  plot.ipynb  result.csv  result_3090.csv  result_isca.csv  speed.cpp  tcfft_doit_f32.cpp  tcfft_f32.cu  tcfft_f32.h  tcfft_half.cu  tcfft_half_2d.cu  test.sh
fft/fftw-3.3.10/: Makefile  config.status  libtool
knn/: Makefile  README.md  knn_all_4090.csv  knn_cuda_simt  knn_cuda_tc  knn_result.csv  knncuda_simt.cu  knncuda_simt.h  knncuda_tc.cu  knncuda_tc.h  knncuda_tc_run.cpp  plot.ipynb  result_a100.csv  result_isca.csv  run_bench.sh  sample.py  speedup_isca.csv
nebula/: .gitignore  alexnet_small.csv  nebula_profermance.py  nebula_result.csv  plot.ipynb  resnet_small.csv  vgg_small.csv
precisionTest/: CMakeLists.txt  precTest.cu  precTest.hpp
scripts/: PTXRewriter.py  Rewriter.py  get_all_clk_mode.py  process_ncu_speedoflight.py
scripts/testCu/: new_mma_sm80.h
scripts/testPtx/: ptx0.ptx  ptx0.ptx.new
snapMRF_mod/: mrf_result.csv  plot.ipynb
snapMRF_mod/data/: B1_brain.out  B1_phantom.out  atoms_epg_fisp.out  atoms_epg_se.out  atoms_epg_sr.out  atoms_epg_ssfp.out  (+4 more)
(+66 files in other folders)
